# python-google-gemini

./: .gitignore  01-basic.ipynb  02-llama-index.ipynb  03-other-scripts.ipynb  04-function-calling.ipynb  05-recommender.ipynb  06-llama-index-rag.ipynb  Makefile  gemini.db  gemini.py  pyproject.toml
